k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feel-scala-playground
spec:
  selector:
    matchLabels:
      app: feel-scala-playground
  replicas: 1
  template:
    metadata:
      labels:
        app: feel-scala-playground
    spec:
      containers:
        - name: feel-container
          image: ghcr.io/camunda-community-hub/feel-scala-playground:latest
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
