k8s/ingress.bk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feel-tutorial-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: feel-tutorial-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: feel-tutorial-service
                port:
                  number: 8080
