k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feel-scala-playground-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - feel-playground.camunda.com
      secretName: feel-playground-tls
  rules:
    - host: feel-playground.camunda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: feel-scala-playground-service
                port:
                  number: 8080
